[tool.poetry]
name = "saddle"
version = "0.1.0"
description = ""
authors = ["Leonardo Campos"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
polars = "^0.17.0"
numpy = "^1.24.2"
matplotlib = "^3.7.1"
plotly = "^5.14.1"
bottleneck = "^1.3.7"
numexpr = "^2.8.4"
jax = "^0.4.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
