[tool.poetry]
name = "saddle"
version = "0.1.0"
description = ""
authors = ["Leonardo Campos"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10,<3.12"
numpy = "^1.24.2"
matplotlib = "^3.7.1"
plotly = "^5.14.1"
numba = "^0.58.1"



[tool.poetry.group.dev.dependencies]
black = "23.3.0"
flake8 = "6.0.0"
ruff = "0.0.261"
isort = "5.12.0"
mypy = "1.2.0"
pre-commit = "3.2.2"
rich = "13.3.3"
pytest = "^7.3.1"
ipykernel = "^6.22.0"

[tool.black]
line-length = 88

[tool.isort]
profile = 'black'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
