[tool.poetry]
name = "saddle"
version = "0.1.0"
description = ""
authors = ["Leonardo Campos"]
readme = "README.md"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.10,<3.12"
numpy = "^1.24.2"
matplotlib = "^3.7.1"
plotly = "^5.14.1"
numba = "^0.58.1"
pandas = "^2.2.0"


[tool.poetry.group.dev.dependencies]
black = "23.3.0"
flake8 = "6.0.0"
ruff = "0.0.261"
isort = "5.12.0"
mypy = "1.2.0"
pre-commit = "3.2.2"
rich = "13.3.3"
pytest = "^7.3.1"
ipykernel = "^6.22.0"

[tool.black]
line-length = 88

[tool.isort]
profile = 'black'
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
    | _build
)/
'''


[tool.mypy]
files = ["src", "docs", "noxfile.py"]
exclude = [".venv", "tests"]
enable_error_code = ["ignore-without-code"]
strict = true
warn_unused_ignores = false                 # true
show_column_numbers = true

[tool.ruff]
line-length = 88
select = ["ALL"]
ignore = [
    "D203",
    "D213",
    "ANN101",
    "ANN102",
    "PLR0913",
    "FBT001",
    "FBT002",
    "FBT003",
]
unfixable = ["ERA001"]
force-exclude = true
src = ["src"]
target-version = "py310"

[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]

[tool.ruff.flake8-builtins]
builtins-ignorelist = ["id", "type"]
